[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poker-games"
version = "0.1.0"
description = "Poker game environments and experiments."
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["kuhn_poker*"]
